--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     ]
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.6"
+    "@types/js-cookie": "^3.0.6",
+    "@types/redux-mock-store": "^1.5.0",
+    "redux-mock-store": "^1.5.5"
   }
 }
